# Atomic-Habits

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml  ci.yml
config/: celery.py  settings.py  urls.py
tracker/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
tracker/management/commands/: generate_habits.py
tracker/migrations/: 0001_initial.py  0002_alter_habit_frequency_subscription.py  0003_subscription_days_of_week.py  0004_alter_subscription_send_time.py  0005_alter_habit_execution_time.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
