[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = ["Антонюк Евгений <38914583+AntonyukEvgeniy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
