[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = ["Антонюк Евгений <38914583+AntonyukEvgeniy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"
django-cors-headers = "^4.7.0"
djangorestframework = "^3.16.0"
environs = "^14.1.1"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
